DFR-1880: Refector - Contested issue application